[emacs] Configure cmake

--- a/emacs.org
+++ b/emacs.org
@@ -3223,6 +3223,17 @@ Inherit Clojure snippets.
   ,#+END_SRC
 #+END_SRC
 
+*** CMake code block
+#+BEGIN_SRC snippet :tangle stow/emacs/.config/emacs/etc/yasnippet/snippets/org-mode/scmake
+  # -*- mode: snippet; -*-
+  # name: CMake code block
+  # key: scmake
+  # --
+  ,#+BEGIN_SRC cmake
+  $0
+  ,#+END_SRC
+#+END_SRC
+
 *** Clojure code block
 #+BEGIN_SRC snippet :tangle stow/emacs/.config/emacs/etc/yasnippet/snippets/org-mode/sclj
   # -*- mode: snippet; -*-
@@ -4894,7 +4905,7 @@ Inherit Clojure snippets.
      ((company-indium-repl company-files :with company-yasnippet)))
     (koek-cpny/setup-backends geiser-mode geiser-repl-mode
      ((geiser-company-backend company-files :with company-yasnippet)))
-    (koek-cpny/setup-backends makefile-mode scad-mode
+    (koek-cpny/setup-backends cmake-mode makefile-mode scad-mode
      ((company-dabbrev-code company-files :with company-yasnippet)))
     (koek-cpny/setup-backends conf-mode
      ((company-dabbrev company-files :with company-yasnippet)))
@@ -6081,7 +6092,7 @@ Stavrou)]].
 
 * Languages
 Several modes want the =txt= file extension. Insert [[*Text][text-mode]]
-configuration here so [[*Conf][conf-mode]] can shadow the catchall
+configuration here so [[*CMake][cmake-mode]] and [[*Conf][conf-mode]] can shadow the catchall
 ~auto-mode-alist~ entry.
 
 #+BEGIN_SRC emacs-lisp :noweb no-export
@@ -6099,9 +6110,11 @@ configuration here so [[*Conf][conf-mode]] can shadow the catchall
     (bind-keys
      :map c-mode-map
      ("C-x p i l" . koek-eglt/init-clangd)
+     ("C-x p i c" . koek-cmke/init)
      ("C-c d d" . koek-dl/lookup-c)
      :map c++-mode-map
      ("C-x p i l" . koek-eglt/init-clangd)
+     ("C-x p i c" . koek-cmke/init)
      ("C-c d d" . koek-dl/lookup-cpp)
      :map java-mode-map
      ("C-c d d" . koek-dl/lookup-openjdk))
@@ -6426,6 +6439,41 @@ configuration here so [[*Conf][conf-mode]] can shadow the catchall
     (unbind-key "TAB" cider-repl-mode-map)
 
     (setq cider-repl-use-pretty-printing t))
+#+END_SRC
+
+** CMake
+[[https://gitlab.kitware.com/cmake/cmake][cmake-mode (GitLab)]]
+
+#+BEGIN_SRC emacs-lisp
+  (use-package cmake-mode
+    :straight t
+    :mode ((rx (or ".cmake" "/CMakeLists.txt") string-end) . cmake-mode)
+    :preface
+    ;; source tree, relative
+    (defun koek-cmke/init (root config &optional interactive)
+      (interactive
+       (let ((root (or (koek-proj/locate-root) (user-error "Not in a project")))
+             (config
+              (or (car (koek-proj/locate-configs "CMakeLists.txt" nil 'prompt))
+                  (user-error "No CMake configuration found"))))
+         (list root config 'interactive)))
+      (when interactive
+        (message "Initializing CMake..."))
+      (let* ((default-directory root)     ; Dynamic variable
+             (result
+              (progn
+                (make-directory "build" 'no-error)
+                (make-symbolic-link
+                 "build/compile_commands.json" "compile_commands.json" 'overwrite)
+                (call-process "cmake" nil nil nil
+                              "-S" config "-B" "build/"
+                              "-D" "CMAKE_EXPORT_COMPILE_COMMANDS=ON"))))
+        (unless (zerop result)
+          (error "CMake returned %d" result)))
+      (when interactive
+        (message "Initializing CMake...done")))
+    :config
+    (bind-key "C-x p i c" #'koek-cmke/init cmake-mode-map))
 #+END_SRC
 
 ** Common Lisp
