[emacs] Stop automatically completing input

--- a/emacs.org
+++ b/emacs.org
@@ -4967,7 +4967,7 @@ Inherit Clojure snippets.
     :config
     (setq company-backends
           '((company-capf company-files :with company-yasnippet)))
-    (setq company-idle-delay 1)           ; In seconds
+    (setq company-idle-delay nil)
     (setq company-show-numbers t)
     :delight)
 
