[emacs] Fix obsolete warning

--- a/emacs.org
+++ b/emacs.org
@@ -4968,7 +4968,7 @@ Inherit Clojure snippets.
     (setq company-backends
           '((company-capf company-files :with company-yasnippet)))
     (setq company-idle-delay nil)
-    (setq company-show-numbers t)
+    (setq company-show-quick-access t)
     :delight)
 
   (use-package company-dabbrev
