--- a/emacs.org
+++ b/emacs.org
@@ -5126,7 +5126,7 @@ On [[https://devdocs.io/][DevDocs]], enable:
                       (thread-last id
                         (replace-regexp-in-string
                          (rx "~" (one-or-more (any digit ".")) line-end) "")
-                        (replace-regexp-in-string (rx "_") "-")
+                        (replace-regexp-in-string "_" "-")
                         (concat "koek-dl/lookup-")
                         intern)))
           (defalias symbol
