[emacs] Tweak notation

--- a/emacs.org
+++ b/emacs.org
@@ -2269,7 +2269,7 @@ VC is a placeholder.
       :next #'koek-lh/next-dictionary-link
       :at-point-p #'koek-lh/point-at-dictionary-link-p
       ;; dictionary-mode doesn't bind the symbol dictionary-mode
-      :predicates (list #'koek-lh/dictionary-mode-p)
+      :predicates '(koek-lh/dictionary-mode-p)
       :open #'koek-lh/open-dictionary-link)
     (push 'link-hint-dictionary-link link-hint-types))
 #+END_SRC
