--- a/emacs.org
+++ b/emacs.org
@@ -5475,6 +5475,8 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
     (setq mu4e-compose-context-policy 'ask-if-none))
 
   (use-package mu4e-org
+    ;; system
+    :when (executable-find "mu")
     :after org
     :config
     (require 'mu4e)
