[emacs] Add function to initialize Meson

--- a/emacs.org
+++ b/emacs.org
@@ -6228,10 +6228,12 @@ configuration here so [[*CMake][cmake-mode]] and [[*Conf][conf-mode]] can shadow
      :map c-mode-map
      ("C-x p i l" . koek-eglt/init-clangd)
      ("C-x p i c" . koek-cmke/init)
+     ("C-x p i m" . koek-mson/init)
      ("C-c d d" . koek-dl/lookup-c)
      :map c++-mode-map
      ("C-x p i l" . koek-eglt/init-clangd)
      ("C-x p i c" . koek-cmke/init)
+     ("C-x p i m" . koek-mson/init)
      ("C-c d d" . koek-dl/lookup-cpp)
      :map java-mode-map
      ("C-c d d" . koek-dl/lookup-openjdk))
@@ -6835,7 +6837,28 @@ configuration here so [[*CMake][cmake-mode]] and [[*Conf][conf-mode]] can shadow
 #+BEGIN_SRC emacs-lisp
   (use-package meson-mode
     :straight t
-    :mode (rx "meson.build" string-end))
+    :mode (rx "meson.build" string-end)
+    :preface
+    (defun koek-mson/init (root config &optional interactive)
+      (interactive
+       (let ((root (or (koek-proj/locate-root) (user-error "Not in a project")))
+             (config
+              (or (car (koek-proj/locate-configs "meson.build" nil 'prompt))
+                  (user-error "No Meson configuration found"))))
+         (list root config 'interactive)))
+      (when interactive
+        (message "Initializing Meson..."))
+      (let* ((default-directory root)     ; Dynamic variable
+             (result
+              (progn
+                (make-directory "build" 'no-error)
+                (make-symbolic-link
+                 "build/compile_commands.json" "compile_commands.json" 'overwrite)
+                (call-process "meson" nil nil nil config "build/"))))
+        (unless (zerop result)
+          (error "Meson returned %d" result)))
+      (when interactive
+        (message "Initializing Meson...done"))))
 #+END_SRC
 
 ** Octave & MATLAB
