[emacs] Tweak various mode declarations

--- a/emacs.org
+++ b/emacs.org
@@ -6625,7 +6625,7 @@ configuration here so [[*CMake][cmake-mode]] and [[*Conf][conf-mode]] can shadow
 ** Conf
 #+BEGIN_SRC emacs-lisp
   (use-package conf-mode
-    :mode (rx (or ".desktop" "cross.txt") string-end)
+    :mode (rx (or ".desktop" "/cross.txt") string-end)
     :preface
     (defvar koek-conf/mode-names
       '((conf-colon-mode . "Conf:")
@@ -6837,7 +6837,7 @@ configuration here so [[*CMake][cmake-mode]] and [[*Conf][conf-mode]] can shadow
 #+BEGIN_SRC emacs-lisp
   (use-package meson-mode
     :straight t
-    :mode (rx "meson.build" string-end)
+    :mode (rx "/meson.build" string-end)
     :preface
     (defun koek-mson/init (root config &optional interactive)
       (interactive
