[emacs] Disambiguate snake case and subscript in org-mode

--- a/emacs.org
+++ b/emacs.org
@@ -6967,6 +6967,7 @@ templates]].
 
     ;; Appearance
     (setq org-hide-emphasis-markers t)
+    (setq org-use-sub-superscripts '{})
     (setq org-pretty-entities t)
     (setq org-highlight-latex-and-related '(native))
     (push '("" "listings" nil) org-latex-packages-alist)
