--- a/emacs.org
+++ b/emacs.org
@@ -6973,9 +6973,8 @@ templates]].
     (push '("" "listings" nil) org-latex-packages-alist)
 
     ;; Appearance - Headings
-    (setq org-fontify-whole-heading-line t)
     (setq org-fontify-done-headline nil)
-    (setq org-ellipsis "…")
+    (setq org-ellipsis truncate-string-ellipsis)
 
     ;; Appearance - Images
     (setq org-startup-with-inline-images t)
