[emacs] Allow multiple agenda buffers

--- a/emacs.org
+++ b/emacs.org
@@ -6996,6 +6996,7 @@ templates]].
     :bind
     ("C-c o a" . org-agenda)
     :config
+    (setq org-agenda-sticky t)
     (setq org-agenda-time-leading-zero t))
 
   (use-package org-capture
