[emacs] Stop restoring window configuration on org-src quit

--- a/emacs.org
+++ b/emacs.org
@@ -7034,6 +7034,8 @@ templates]].
         (:override (org-buffer-name _lang) koek-org/construct-edit-buffer-name)
       ;; Mirror helpful buffer names
       (format "*org-src: %s*" org-buffer-name))
+    :config
+    (setq org-src-window-setup 'plain)
     :delight)
 #+END_SRC
 
