[emacs] Stop prompting whether to return to existing org-src buffer

--- a/emacs.org
+++ b/emacs.org
@@ -7036,6 +7036,7 @@ templates]].
       (format "*org-src: %s*" org-buffer-name))
     :config
     (setq org-src-window-setup 'plain)
+    (setq org-src-ask-before-returning-to-edit-buffer nil)
     :delight)
 #+END_SRC
 
