--- a/emacs.org
+++ b/emacs.org
@@ -7564,14 +7564,12 @@ current theme.
         (enable-theme new)
         (modus-themes-with-colors
           (custom-set-faces
-           `(koek-diff/variant            ((,class :inherit bold)))
-           `(eyebrowse-mode-line-active   ((,class :foreground unspecified)))
-           `(eyebrowse-mode-line-inactive ((,class :foreground ,bg-alt)))
-           `(koek-wm/selected-workspace   ((,class :inherit bold)))
-           `(koek-wm/unselected-workspace ((,class :foreground ,bg-alt)))
-           `(pdf-links-read-link          ((,class
-                                            :foreground unspecified :background unspecified
-                                            :inherit (modus-themes-intense-magenta bold)))))))
+           `(koek-wm/selected-workspace ((,class :inherit bold)))
+           `(eyebrowse-mode-line-active ((,class :foreground unspecified)))
+           `(koek-diff/variant          ((,class :inherit bold)))
+           `(pdf-links-read-link        ((,class
+                                          :foreground unspecified :background unspecified
+                                          :inherit (modus-themes-intense-magenta bold)))))))
       ;; After user theme
       (run-hooks 'koek-thm/enable-hook))
 
@@ -7583,18 +7581,20 @@ current theme.
     :init
     (bind-key "C-c z t" #'koek-mt/toggle-variant)
 
+    (setq modus-themes-success-deuteranopia t)
     (setq modus-themes-bold-constructs t)
     (setq modus-themes-italic-constructs t)
+    (setq modus-themes-region '(bg-only))
     (setq modus-themes-hl-line '(accented underline))
     (setq modus-themes-subtle-line-numbers t)
-    (setq modus-themes-mode-line '(moody))
+    (setq modus-themes-mode-line '(moody accented))
     (setq modus-themes-headings '((t . (background overline))))
     (setq modus-themes-variable-pitch-headings t)
     (setq modus-themes-scale-headings t)
     (setq modus-themes-diffs 'deuteranopia)
     (setq modus-themes-org-blocks 'gray-background)
     :config
-    (setq face-near-same-color-threshold 45000)
+    (setq face-near-same-color-threshold 70000)
     (push 'modus-vivendi koek-thm/dark-themes)
     (koek-mt/load 'vivendi))
 #+END_SRC
