--- a/emacs.org
+++ b/emacs.org
@@ -7893,9 +7893,7 @@ windows and continues in the mode line.
                                     koek-ml/checker-names)))
                (concat name " "))
             ,(pcase (koek-ml/get-flymake-state)
-               (`running
-                "-;-;-")
-               (`finished
+               ((or `running `finished)
                 (let ((n-diags (koek-ml/get-flymake-n-diags)))
                   (mapconcat
                    (lambda (cat)
