[emacs] Fix task mode line

--- a/emacs.org
+++ b/emacs.org
@@ -7921,7 +7921,8 @@ windows and continues in the mode line.
 
     (defconst koek-ml/task
       '(:eval
-        (when (and (org-clock-is-active) (moody-window-active-p))
+        (when (and (fboundp 'org-clock-is-active) (org-clock-is-active)
+                   (moody-window-active-p))
           `("" koek-ml/separator
             ,(org-duration-from-minutes (org-clock-get-clocked-time)))))
       "Task mode line construct.")
