[emacs] Treat file names starting with ~/ as absolute file names

--- a/emacs.org
+++ b/emacs.org
@@ -8089,7 +8089,7 @@ Define well known directories.
     (when-let ((file-name (getenv name)))
       (file-name-as-directory file-name)))
 
-  (defconst koek/home-dir (expand-file-name "~/")
+  (defconst koek/home-dir "~/"
     "File name to home directory.")
 
   (defconst koek/documents-dir
