--- a/emacs.org
+++ b/emacs.org
@@ -8185,8 +8185,7 @@ of ~koek/projects-dir~, are agenda files. Configure agendas.
       (thread-last (koek/get-agenda-dirs)
         (seq-mapcat (lambda (file-name)
                       (directory-files file-name 'full (rx ".org" line-end))))
-        (seq-filter (lambda (file-name)
-                      (not (koek/lock-file-p file-name))))
+        (seq-remove #'koek/lock-file-p)
         seq-uniq))
 
     (define-advice org-agenda-files
