--- a/dotfiles.org
+++ b/dotfiles.org
@@ -166,6 +166,16 @@ Hide superfluous applications.
   Name=Qt V4L2 video capture utility
 #+END_SRC
 
+#+BEGIN_SRC conf :tangle stow/qtox/.local/share/applications/snorenotify.desktop :noweb yes
+  <<desktop-nodisplay>>
+  Name=SnoreNotify
+#+END_SRC
+
+#+BEGIN_SRC conf :tangle stow/qtox/.local/share/applications/snoresettings.desktop :noweb yes
+  <<desktop-nodisplay>>
+  Name=SnoreSettings
+#+END_SRC
+
 #+BEGIN_SRC conf :tangle stow/steam/.local/share/applications/steam.desktop :noweb yes
   <<desktop-nodisplay>>
   Name=Steam (Runtime)
