--- a/dotfiles.org
+++ b/dotfiles.org
@@ -322,7 +322,7 @@ To apply configuration, run:
 
 ** Creative
 #+BEGIN_SRC fundamental :tangle stow/catgen/.local/share/applications-categories/Creative.category
-  ardour.desktop
+  ardour6.desktop
   blender.desktop
   calf.desktop
   freecad.desktop
