--- a/dotfiles.org
+++ b/dotfiles.org
@@ -386,6 +386,7 @@ To apply configuration, run:
   ca.desrt.dconf-editor.desktop
   gnome-control-center.desktop
   gnome-system-monitor.desktop
+  nm-connection-editor.desktop
   org.gnome.DiskUtility.desktop
   org.gnome.Extensions.desktop
   org.gnome.Logs.desktop
