--- a/dotfiles.org
+++ b/dotfiles.org
@@ -719,7 +719,7 @@ Move maildir directory out of the way.
 To create the database, run:
 
 #+BEGIN_SRC sh
-  mbsync -c "${XDG_CONFIG_HOME:-$HOME/.config}/isync/mbsyncrc" -a && mu init --my-address="nicolas@dejaeghe.re" --my-address="nicodeja@gmail.com" --my-address="nicodeja@mac.com" --my-address="Nicolas.DeJaeghere@belfius.be"
+  mbsync -c "${XDG_CONFIG_HOME:-$HOME/.config}/isync/mbsyncrc" -a && mu init --my-address="nicolas@dejaeghe.re" --my-address="nicodeja@gmail.com" --my-address="nicodeja@mac.com" --my-address="Nicolas.DeJaeghere@belfius.be" --my-address="n.dejaeghere@televic.com"
 #+END_SRC
 
 * vdirsyncer :not_exp_env:
