--- a/dotfiles.org
+++ b/dotfiles.org
@@ -858,6 +858,38 @@ value determined during calibration, run:
   echo 362 > /sys/class/backlight/intel_backlight/brightness
 #+END_SRC
 
+* Wacom :wip:
+#+BEGIN_SRC fundamental :noweb-ref wacom-pad :exports none
+  Wacom Intuos BT M Pad pad
+#+END_SRC
+
+#+BEGIN_SRC fundamental :noweb-ref wacom-stylus :exports none
+  Wacom Intuos BT M Pen stylus
+#+END_SRC
+
+#+BEGIN_SRC sh :tangle stow/wacom/.local/bin/wacom-map-primary :noweb yes :shebang #!/bin/bash
+  stylus="<<wacom-stylus>>"
+
+  xsetwacom set "$stylus" MapToOutput "HDMI-1"
+  xsetwacom set "$stylus" Area "0 0 21600 12150"
+#+END_SRC
+
+#+BEGIN_SRC sh :tangle stow/wacom/.local/bin/wacom-setup-default :noweb yes :shebang #!/bin/bash
+  pad="<<wacom-pad>>"
+  stylus="<<wacom-stylus>>"
+
+  wacom-map-primary
+  xsetwacom set "$pad" Button 1
+  xsetwacom set "$pad" Button 2
+  xsetwacom set "$pad" Button 3
+  xsetwacom set "$pad" Button 8
+  xsetwacom set "$stylus" TabletPCButton on
+  xsetwacom set "$stylus" Button 1 "button +1"
+  xsetwacom set "$stylus" Button 2 pan
+  xsetwacom set "$stylus" Button 3 "button +3"
+  xsetwacom set "$stylus" PanScrollThreshold 250
+#+END_SRC
+
 * Org protocol :setup:
 Define org protocol scheme handler. Must invoke a shell to expand
 environment variables. For desktop entry or scheme handler format, see
