[emacs] Specify buffer placement

--- a/emacs.org
+++ b/emacs.org
@@ -1091,8 +1091,12 @@ Resize windows pixelwise, not characterwise.
   (setq window-resize-pixelwise t)
 #+END_SRC
 
-** Window manipulation commands
-Rebind cumbersome window commands.
+#+BEGIN_SRC emacs-lisp
+  (setq window-sides-vertical t)
+#+END_SRC
+
+** Window commands
+Rebind cumbersome and bind additional window commands.
 
 #+BEGIN_SRC emacs-lisp
   (bind-keys
@@ -1101,7 +1105,8 @@ Rebind cumbersome window commands.
    ("C-c w b" . balance-windows)
    ("C-c w d" . delete-window)
    ("C-c w C-d" . delete-other-windows)
-   ("C-c w M-d" . kill-buffer-and-window))
+   ("C-c w M-d" . kill-buffer-and-window)
+   ("C-c w m" . window-toggle-side-windows))
 #+END_SRC
 
 Unlike ~balance-windows~, which divides the width and height equally,
@@ -1158,7 +1163,7 @@ steps.
   (use-package ace-window
     :straight t
     :bind
-    ([remap other-window] . ace-window)
+    ("C-c j w" . ace-window)
     :preface
     (define-advice ace-window-display-mode
         (:around (f &rest args) koek-ace/disable-setup-mode-line)
@@ -1170,7 +1175,7 @@ steps.
     (setq aw-scope 'frame)
     (setq aw-swap-invert t)
     (setq aw-keys '(?q ?s ?d ?f ?j ?k ?l ?m))
-    (setq aw-dispatch-alist '((?o aw-flip-window)))
+    (setq aw-dispatch-alist nil)
     (setq aw-leading-char-style 'path)
     (ace-window-display-mode)
     ;; Ace isn't a minor mode but it can be delighted [sic]
@@ -1411,6 +1416,67 @@ Bury unneeded buffers, computers have more than enough memory.
       (bury-buffer)))
 
   (bind-key [remap kill-buffer] #'koek-buff/bury)
+#+END_SRC
+
+** Buffer placement
+#+BEGIN_SRC emacs-lisp
+  (defun koek-buff/display-project-shell-p (name _action)
+    ;; Shell then project, project is expensive
+    (and (koek-buff/shellp name) (koek-proj/locate-root name)))
+
+  (defun koek-buff/display-doc-p (name _action)
+    (koek-buff/docp name))
+
+  (let ((default-hor-actions
+          '((window-parameters . ((no-other-window . t) (no-delete-other-windows . t)))
+            (preserve-size     . (nil . t))
+            (window-height     . 0.15)))
+        (default-vert-actions
+          '((window-parameters . ((no-other-window . t) (no-delete-other-windows . t)))
+            (preserve-size     . (t . nil))
+            (window-width      . 80))))
+    (setq display-buffer-alist
+          `((,(rx line-start
+                  (or "*magit"
+                      "*vterm*"
+                      "*eshell*"
+                      "*Proced*"
+                      "*org-src"))
+             . ((display-buffer-reuse-window display-buffer-same-window)))
+            ;; Below selected
+            (,(rx line-start (or " *transient*" "*Calendar*"))
+             . (display-buffer-below-selected))
+            ;; Top
+            (,(rx line-start
+                  (or "*Occur*"
+                      "*grep*"
+                      "*Flymake"
+                      "*PDF-Occur*"))
+             . (display-buffer-in-side-window . ((side . top) ,@default-hor-actions)))
+            ;; Left
+            (,(rx line-start
+                  (or "*Customize"
+                      "*Network Security Manager*"
+                      "*BBDB*"
+                      "*Dictionary*"
+                      "*Holidays*"
+                      "*Pp"
+                      "*org-roam*"))
+             . (display-buffer-in-side-window . ((side . left) ,@default-vert-actions)))
+            (,(rx line-start "*Messages*")
+             . (display-buffer-in-side-window . ((side . left) (slot . 1) ,@default-vert-actions)))
+            (koek-buff/display-doc-p
+             . (display-buffer-in-side-window . ((side . left) (slot . 1) ,@default-vert-actions)))
+            ;; Bottom
+            (,(rx line-start
+                  (or "*Backtrace*"
+                      "*Warnings*"
+                      "*trace-output*"
+                      "*compilation"
+                      "*Compile-Log*"))
+             . (display-buffer-in-side-window . ,default-hor-actions))
+            (koek-buff/display-project-shell-p
+             . (display-buffer-in-side-window . ((slot . 1) ,@default-hor-actions))))))
 #+END_SRC
 
 ** ibuffer - list-buffers replacement
@@ -2170,7 +2236,9 @@ VC is a placeholder.
     :straight magit
     :defer t
     :config
-    (setq magit-bury-buffer-function #'magit-mode-quit-window))
+    (setq magit-uniquify-buffer-names nil)
+    (setq magit-display-buffer-function #'display-buffer)
+    (setq magit-bury-buffer-function #'quit-window))
 
   (use-package magit-status
     :bind
@@ -5585,6 +5653,11 @@ To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniver
           bbdb-address-format-list)
     (setq bbdb-default-country nil)
     (setq bbdb-phone-style nil)
+
+    ;; Delegate to `display-buffer', respect `display-buffer-alist'
+    (setq bbdb-pop-up-window-size t)
+    (setq bbdb-mua-pop-up-window-size t)
+
     (bbdb-initialize 'mu4e 'message))
 
   (use-package bbdb-com
